 - Qt: Fix static compilation in MinGW (fixes mgba.io/i/1769)
Misc:
 - Debugger: Keep track of global cycle count
 - FFmpeg: Add looping option for GIF/APNG
 - Qt: Renderer can be changed while a game is running
 - Qt: Add hex index to palette view
 - Qt: Add transformation matrix info to sprite view
 - Qt: Add per-page scrolling to memory view (fixes mgba.io/i/1795)

0.8.2: (2020-06-14)
Emulation fixes:
 - ARM: Fix timing on Thumb shift instructions
 - GB: Fix GBC game registers after skipping BIOS
 - GB MBC: Support 4MB MBC30 ROMs (fixes mgba.io/i/1713)
 - GB Video: Fix BGPS value after skipping BIOS (fixes mgba.io/i/1717)
 - GBA: Add missing RTC overrides for Legendz games
 - GBA BIOS: Reset renderer when RegisterRamReset called (fixes mgba.io/i/1756)
 - GBA SIO: Fix Multiplayer busy bit
 - GBA SIO: Fix double-unloading active driver
 - GBA Timers: Fix deserializing count-up timers
 - GBA Video: Fix mosaic objects drawing past the end (fixes mgba.io/i/1702)
 - GBA Video: Fix disabling OBJWIN in GL renderer (fixes mgba.io/i/1759)
 - GBA Video: Add missing parts of 256-color mode 0 mosaic (fixes mgba.io/i/1701)
 - GBA Video: Fix double-size OBJ wrapping in GL renderer (fixes mgba.io/i/1712)
 - GBA Video: Simplify sprite cycle counting (fixes mgba.io/i/1279)
 - GBA Video: Fix sprite/backdrop blending regression
Other fixes:
 - 3DS: Fix framelimiter on newer citro3d (fixes mgba.io/i/1771)
 - ARM: Fix disassembling of several S-type instructions (fixes mgba.io/i/1778)
 - ARM Debugger: Clear low bit on breakpoint addresses (fixes mgba.io/i/1764)
 - CMake: Always use devkitPro toolchain when applicable (fixes mgba.io/i/1755)
 - Core: Fix ELF loading regression (fixes mgba.io/i/1669)
 - Core: Fix crash modifying hash table entry (fixes mgba.io/i/1673)
 - GB Video: Fix some cases where SGB border doesn't draw to multi-buffers
 - GBA: Reject incorrectly sized BIOSes
 - GBA: Break infinite loop for 0-frame mVLs (fixes mgba.io/i/1723)